--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: uritemplate.py
+Source: uritemplate
 Maintainer: Dennis Kaarsemaker <dennis@kaarsemaker.net>
 Section: python
 Priority: optional
@@ -8,13 +8,13 @@ X-Python-Version: >= 2.6
 X-Python3-Version: >= 3.0
 Homepage: http://uritemplatepy.readthedocs.org/
 
-Package: python-uritemplate.py
+Package: python-uritemplate
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}
 Description: Simple python library to deal with URI Templates.
  Simple python library to deal with URI Templates.
 
-Package: python3-uritemplate.py
+Package: python3-uritemplate
 Architecture: all
 Depends: ${misc:Depends}, ${python3:Depends}
 Description: Simple python library to deal with URI Templates.
