--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: uritemplate
 Maintainer: Dennis Kaarsemaker <dennis@kaarsemaker.net>
 Section: python
 Priority: optional
-Build-Depends: debhelper, python-all, python-setuptools, python3-all
+Build-Depends: debhelper, python-all, python-setuptools, python3-all, python3-setuptools
 Standards-Version: 3.9.3
 X-Python-Version: >= 2.6
 X-Python3-Version: >= 3.0
